--- a/ml/lin_reg.ipynb
+++ b/ml/lin_reg.ipynb
@@ -183,6 +183,20 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "name, address, date_of_birth, favourite_Scottish_hill, hill_rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
